Bug 462492 - Identity with CC Addresses starts composer without To: field
Summary: Identity with CC Addresses starts composer without To: field
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-01 12:34 UTC by Allen Winter
Modified: 2022-12-02 12:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2022-12-01 12:34:33 UTC
if I add an address to the CC addresses field in my Identity (under Advanced) and then start a new composer window notice that the  To: field is missing.  there is a second CC: field

STEPS TO REPRODUCE
1. Add an email address to Identity->Advanced->CC addresses
2.  open new composer

OBSERVED RESULT
See 2 CC fields.  One is empty.  One has the configured email address correctly added

EXPECTED RESULT
1 To Field (empty)
1 CC Field (with the configured email address)

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2022-12-01 12:54:29 UTC
I confirm it!
I will work on it.
Comment 2 Laurent Montel 2022-12-01 21:35:01 UTC
Git commit a6cebee315e6de31daaa7bbea4079bc0d9f7b2e2 by Laurent Montel.
Committed on 01/12/2022 at 21:34.
Pushed by mlaurent into branch 'release/22.12'.

Fix bug 462492  Identity with CC Addresses starts composer without To: field

FIXED-IN: 5.22.0

M  +1    -6    messagecomposer/src/recipient/recipientseditor.cpp

https://invent.kde.org/pim/messagelib/commit/a6cebee315e6de31daaa7bbea4079bc0d9f7b2e2
Comment 3 Allen Winter 2022-12-02 12:38:37 UTC
thanks Laurent