Fix bug 462492  Identity with CC Addresses starts composer without To: field

FIXED-IN: 5.22.0
BUG: 462492